<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD">

    <TextView
        android:id="@+id/tvTitreChaleur"
        android:text="@string/titre_conversion_temp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#0D47A1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <RadioGroup
        android:id="@+id/rgTemperature"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/rbCtoF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius_to_fahrenheit"
            android:checked="true"
            android:textColor="#1565C0"/>

        <RadioButton
            android:id="@+id/rbFtoC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit_to_celsius"
            android:layout_marginStart="24dp"
            android:textColor="#1565C0"/>

    </RadioGroup>

    <EditText
        android:id="@+id/etValeurChaleur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/saisir_valeur"
        android:inputType="numberDecimal"
        android:background="@android:drawable/editbox_background"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="no"/>

    <Button
        android:id="@+id/btnConvertirChaleur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convertir"
        android:backgroundTint="#1565C0"
        android:textColor="#FFFFFF"
        android:padding="12dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tvResultatChaleur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultat_vide"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#0D47A1"
        android:gravity="center"
        android:background="#BBDEFB"
        android:padding="12dp"/>

</LinearLayout>